@@ -209,7 +209,14 @@ class Type {
 			cl = __eval__(name);
 		#elseif js
 			try {
+				#if js_namespace
+				if (name.indexOf('.') < 0)
+					cl = eval(js.Boot.__ns + '.' + name);
+				else
+					cl = eval(name);
+				#else
 				cl = eval(name);
+				#end
 			} catch( e : Dynamic ) {
 				cl = null;
 			}
@@ -261,7 +268,14 @@ class Type {
 			e = __eval__(name);
 		#elseif js
 			try {
+				#if js_namespace
+				if (name.indexOf('.') < 0)
+					e = eval(js.Boot.__ns + '.' + name);
+				else
+					e = eval(name);
+				#else
 				e = eval(name);
+				#end
 			} catch( err : Dynamic ) {
 				e = null;
 			}
